--- a/RaceV2/src/org/yourorghere/Instrucciones.form
+++ b/RaceV2/src/org/yourorghere/Instrucciones.form
@@ -50,20 +50,20 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/org/yourorghere/Imagenes/movimiento.png"/>
+          <Image iconType="3" name="/org/yourorghere/imagen/movimiento.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel2"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="160" y="130" width="150" height="-1"/>
+          <AbsoluteConstraints x="160" y="130" width="150" height="90"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/org/yourorghere/Imagenes/teclac.jpg"/>
+          <Image iconType="3" name="/org/yourorghere/imagen/teclac.jpg"/>
         </Property>
       </Properties>
       <Constraints>
@@ -157,18 +157,19 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Aharoni" size="48" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Instrcciones"/>
+        <Property name="text" type="java.lang.String" value="Instrucciones"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="210" y="10" width="270" height="-1"/>
+          <AbsoluteConstraints x="180" y="10" width="300" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/org/yourorghere/Imagenes/space.png"/>
+          <Image iconType="3" name="/org/yourorghere/imagen/space.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel3"/>
       </Properties>
@@ -251,7 +252,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/org/yourorghere/Imagenes/pista.jpg"/>
+          <Image iconType="3" name="/org/yourorghere/imagen/pista.jpg"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
